--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.0",
     "prop-types": "^15.8.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-file-download": "^0.3.5",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
