--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
+    "draft-js": "^0.11.7",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "prop-types": "^15.8.1",
@@ -22,6 +23,7 @@
     "react-file-download": "^0.3.5",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "json-server": "^0.17.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "webpack-bundle-analyzer": "^4.9.0"
   }
 }
