--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "prop-types": "^15.8.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-file-download": "^0.3.5",
