--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
+    "fast-levenshtein": "^3.0.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "prop-types": "^15.8.1",
