--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
     "fast-levenshtein": "^3.0.0",
+    "flag-icon-css": "^4.1.7",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "prop-types": "^15.8.1",
@@ -27,6 +28,7 @@
     "react-file-download": "^0.3.5",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-phone-number-input": "^3.3.6",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
